Committed to  space theme. Added animated star bg; styled font and buttons globally; added floating character; styled, positioned and bacside to cards; consolidated card data to 1 json.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,9 @@
 <main>
-    <!--<app-landing-screen></app-landing-screen>-->
-    <app-timeline></app-timeline>
+    <div class="stars"></div>
+    <div class="twinkling"></div>
+    <div class="clouds"></div>
+    <app-landing-screen style="z-index: 1;"></app-landing-screen>
+    <app-timeline style="z-index: 2;"></app-timeline>
 </main>
 
 <router-outlet />
