--- a/src/app/components/landing-screen/landing-screen.html
+++ b/src/app/components/landing-screen/landing-screen.html
@@ -1,4 +1,9 @@
-<div class="bg-img">
-    <div class=" bg-text bg-text-main">Scott Spicer</div>
-    <div class="bg-text bg-text-sub">Computer Scientist & Engineer</div>
+
+<div class="bg-img"></div>
+<div class="bg-text">
+    <div class="bg-text-main">Scott Spicer</div>
+    <div class="bg-text-sub">Computer Scientist & Engineer</div>
+    <div class="bg-text-supersub">(not actually an astronaut)</div>
 </div>
+<div class="spacesuit-me"></div>
+
