--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,39 @@
 main{
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    font-family: var(--space-font);
+}
+
+.stars, .twinkling, .clouds {
+	position:absolute;
+	display:block;
+	top:0; bottom:0;
+	left:0; right:0;
+	width:100%; height:100%;
+}
+.stars {
+    position: fixed;
+	z-index: 0;
+	background: #000 url('../assets/bg/stars.png') repeat top center;
+    animation: move-twink-back 200s linear infinite;
+}
+/*.twinkling{
+	z-index: 1;
+	background:transparent url('../assets/bg/twinkle.png') repeat top center;
+	animation: move-twink-back 200s linear infinite;
+}*/
+.clouds{
+    position: fixed;
+	z-index: 2;
+    background:transparent url('../assets/bg/clouds.png') repeat top center;
+	animation: move-clouds-back 200s linear infinite;
+}
+
+@keyframes move-twink-back {
+	from {background-position:0 0;}
+	to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+	from {background-position:0 0;}
+	to {background-position:10000px 0;}
 }
