--- a/src/app/components/landing-screen/landing-screen.scss
+++ b/src/app/components/landing-screen/landing-screen.scss
@@ -1,30 +1,60 @@
-.bg-img {
-    background:url("../../../assets/8-Bit-Beach-1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    //background-position: center;
-    
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    //height: 100%;
+:host{               /* host element of <app-landing-screen> */
+    display:block;
+    height:100vh;      /* one full viewport */
+    position:relative; /* containing block for the bg */
     z-index: 1;
 }
 
+.bg-img {
+    //background:url("../../../assets/8-Bit-Beach-1.png");
+    
+    //background: #2f0938;
+    //background: linear-gradient(0deg, rgba(47, 9, 56, 1) 0%, rgba(50, 147, 217, 1) 100%);
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-left: 0px;
+    padding-right:0px;
+    position: fixed;
+    inset:0;
+    z-index: 0;
+    pointer-events:none;
+}
 .bg-text{
     z-index: 2;
-    position: relative;
+    position: absolute;
+    //transform:translateY(-50%);
     color: azure;
     top: 50%; 
     left: 2%;
+    font-family: var(--space-font-title);
 }
-
 .bg-text-main {
     font-size: 6vw;
 }
-
 .bg-text-sub {
     font-size: 2vw;
 }
+.bg-text-supersub {
+    font-size: 0.75vw;
+}
+
+.spacesuit-me{
+    background: url("../../../assets/spacesuit_me.png") no-repeat center / contain;
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    z-index: 7;
+    height: 60vh;
+    width: 45vw;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    animation: rotate 20s linear infinite;
+}
+@keyframes rotate {
+  0% { transform: rotateZ(30deg); }
+  50% { transform: rotateZ(-45deg); }
+  100% { transform: rotateZ(30deg); }
+}
+
