--- a/src/app/components/timeline/timeline-card/timeline-card.scss
+++ b/src/app/components/timeline/timeline-card/timeline-card.scss
@@ -1,17 +1,20 @@
 .tl-card {
-    width: 30rem;
-    height: 12rem;
-    border: 5px solid black;
+    width: 32rem;
+    height: 10rem;
+    border: 5px solid aliceblue;
     padding: 1rem;
     display: grid;
+    background-color: transparent;
+    color: aliceblue;
+}
+.front{
     grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
     overflow: hidden;
-    background-color: burlywood;
 }
 
 .top {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 4fr 16fr 4fr;
 }
 .top-left {
   overflow: hidden;         /* crop an oversize image */
@@ -25,14 +28,13 @@
 .top-mid{
     display: flex;
     flex-direction: column;
-    margin: auto 0;
-    font-size: 1.25rem;
+    margin: auto 10px;
 }
 .top-mid-entity{
-
+    font-size: 1.2rem;
 }
 .top-mid-location{
-    
+    font-size: 1rem;
 }
 .top-right{
     display: flex;
@@ -51,5 +53,17 @@
     font-size: 2rem;
 }
 .bot-sub{
+    display: flex;
     font-size: 1rem;
+    justify-content:space-between;
+}
+
+
+.back{
+    grid-template-rows: auto;
+    overflow: auto;
+}
+.back button{
+    width: 25%;
+    margin: 0 auto;
 }
