--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+
+// Include theming for Angular Material with `mat.theme()`.
+// This Sass mixin will define CSS variables that are used for styling Angular Material
+// components according to the Material 3 design spec.
+// Learn more about theming and how to use it for your application's
+// custom components at https://material.angular.dev/guide/theming
+@use '@angular/material' as mat;
+
+html, body{
+  margin:0;
+  padding:0;
+  height: 100%;
+}
+
+html {
+  @include mat.theme((
+    color: (
+      primary: mat.$magenta-palette,
+      tertiary: mat.$violet-palette,
+    ),
+    //typography: Roboto,
+    density: 0,
+  ));
+}
+
+:root{
+  --space-font-title: 'Orbitron', sans-serif; 
+  --space-font: 'Space Mono', monospace;     /* custom variable */
+}
+body {
+  font: var(--space-font);
+}
+
+
