Added intital skills section, tl card backs have bullets, corteve logo wo words.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,6 +4,7 @@
     <div class="clouds"></div>
     <app-landing-screen style="z-index: 1;"></app-landing-screen>
     <app-timeline style="z-index: 2;"></app-timeline>
+    <app-skills style="z-index: 2;"></app-skills>
 </main>
 
 <router-outlet />
