Started project cards. Icons not showing.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,8 +3,9 @@
     <div class="twinkling"></div>
     <div class="clouds"></div>
     <app-landing-screen style="z-index: 1;"></app-landing-screen>
-    <app-timeline style="z-index: 2;"></app-timeline>
-    <app-skills style="z-index: 2;"></app-skills>
+    <app-timeline></app-timeline>
+    <app-skills></app-skills>
+    <app-projects></app-projects>
 </main>
 
 <router-outlet />
