--- a/src/app/components/skills/skills.html
+++ b/src/app/components/skills/skills.html
@@ -50,5 +50,5 @@
 </div>
 
 <div class="others">
-    <p><u>Other Skills:</u> {{others}}</p>
+    <p><u>Other Skills:</u> {{others.join(", ")}}</p>
 </div>
