Project sections work. Fixed icon path bug, centered card, added vanilla left and right buttons, added the rest of the projects copied from the v1 site.

--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -1,4 +1,6 @@
 <div class="cards">
-    <app-project-card [item]="data[currIndex]"></app-project-card>
+    <button mat-flat-button class="idx-btn" (click)="left()">left</button>
+    <app-project-card class="card" [item]="data[currIndex]"></app-project-card>
+    <button mat-flat-button class="idx-btn" (click)="right()">right</button>
 </div>
 
