--- a/src/app/components/projects/project-card/project-card.html
+++ b/src/app/components/projects/project-card/project-card.html
@@ -4,7 +4,7 @@
         <div>
             <div class="icons">
                 @for(pic of item.ToolsVisualPath; track $index){
-                    <img src="pic">
+                    <img [src]="basePath + pic">
                 }
             </div> <!-- Tool logos -->
             <div><u>Other Tools</u>: {{ item.OtherTools.join(", ") }}</div><!-- other tools -->
@@ -12,6 +12,5 @@
     </div>
     <div>{{ item.Overview }}</div> <!-- Project desc -->
 
-    <button mat-flat-button (click)="doStuff()"></button>
     <!-- Back side for images, videos and my contributions-->
 </div>
