--- a/src/app/components/projects/project-card/project-card.html
+++ b/src/app/components/projects/project-card/project-card.html
@@ -7,10 +7,10 @@
                     <img [src]="basePath + pic">
                 }
             </div> <!-- Tool logos -->
-            <div><u>Other Tools</u>: {{ item.OtherTools.join(", ") }}</div><!-- other tools -->
+            <div class="other-tools"><u>Other Tools</u>: {{ item.OtherTools.join(", ") }}</div><!-- other tools -->
         </div>
     </div>
-    <div>{{ item.Overview }}</div> <!-- Project desc -->
+    <div class="overview">{{ item.Overview }}</div> <!-- Project desc -->
 
     <!-- Back side for images, videos and my contributions-->
 </div>
