--- a/src/app/components/projects/project-card/project-card.scss
+++ b/src/app/components/projects/project-card/project-card.scss
@@ -1,11 +1,11 @@
 .pj-card{
-    height: 50vh;
-    width: 50vw;
-    padding: 1rem;
+    height: 27vh;
+    //width: 50vw;
+    padding: 1.25rem;
     margin: 25px;
     
     display: grid;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 4fr 2fr;
     
     border: 5px solid aliceblue;
     background-color: transparent;
@@ -25,4 +25,11 @@
     height: 60px;
     width: 60px;
     margin: 6px;
+}
+.overview {
+    margin-top: 8px;
+    font-size: 1.25rem;
+}
+.other-tools {
+    font-size: 0.75rem;
 }
