--- a/src/app/components/timeline/timeline.html
+++ b/src/app/components/timeline/timeline.html
@@ -1,16 +1,27 @@
+<div class="switch-container card">
+    <button class="choice" [class.on]="showJobs" (click)="showJobs = true; updateDisplayData()">
+        Jobs
+    </button>
+    <div class="diamond"></div>
+    <button class="choice" [class.on]="!showJobs" (click)="showJobs = false; updateDisplayData()">
+        Education
+    </button>
+</div>
+
 <div class="tl-container">
     <div class="center-line"></div>
     @for(item of data; track $index; let i = $index){
         @if (i % 2 == 0) {
             <div class="card-container even-card">
-                <app-timeline-card [item]="data[i]"></app-timeline-card>
+                <app-timeline-card class="card" [item]="data[i]"></app-timeline-card>
             </div>
         }
         @else {
             <div class="card-container odd-card">
-                <app-timeline-card [item]="data[i]"></app-timeline-card>
+                <app-timeline-card class="card" [item]="data[i]"></app-timeline-card>
             </div>
         }
+        
     }
 </div>
 
