--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,4 +32,31 @@ body {
   color: aliceblue;
 }
 
+/*** Card Styles ***/
+@property --rotate {
+  syntax: "<angle>";
+  initial-value: 130deg;
+  inherits: false;
+}
+@keyframes spin {
+  0% {
+    --rotate: 0deg;
+  }
+  50%{
+    --rotate: 180deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
+}
 
+.card {
+  position: relative;
+  border-radius: 8px;
+  background:
+    linear-gradient(#191c29, #191c29) padding-box,
+    linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2) border-box;
+  border: 4px solid transparent;  
+  animation: spin 3s ease-in-out infinite;
+}
+/*** Card Style END ***/
