--- a/src/app/components/timeline/timeline.html
+++ b/src/app/components/timeline/timeline.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="tl-container">
-    <div class="center-line"></div>
+    <!--<div class="center-line"></div>-->
     @for(item of data; track $index; let i = $index){
         @if (i % 2 == 0) {
             <div class="card-container even-card">
