--- a/src/app/components/timeline/timeline-card/timeline-card.scss
+++ b/src/app/components/timeline/timeline-card/timeline-card.scss
@@ -4,10 +4,14 @@
   height: auto; // Allow height to grow with content
   padding: 1rem;
   display: grid;
-  background-color: transparent;
+  background-color: transparent; // Must set or defaults button to angular mat color
   color: aliceblue;
   overflow: visible; // Allow content to be visible
   
+  &:hover {
+    background-color: var(--card-choice-color);
+  }
+
   @media (max-width: 480px) {
     min-height: 10rem;
     padding: 0.75rem;
