--- a/src/app/components/timeline/timeline.scss
+++ b/src/app/components/timeline/timeline.scss
@@ -37,7 +37,6 @@
 
 // Variables for radio button
 $dark: #3e4666;   // Very dark purple
-//$light: #8b5cf6;  // Medium purple
 $grey: #9ca3af;// #6b7280;
 $width: 21rem;
 $height: 3rem;
@@ -47,7 +46,6 @@ $padding-choice: $height * 0.05;
 .switch-container {
   display: flex;
   margin: 2rem 0;
-  //background-color: $light;
   border-radius: 6px;
   overflow: visible;
   width: $width;
@@ -79,7 +77,7 @@ $padding-choice: $height * 0.05;
     position: absolute;
     width: 15px;
     height: 15px;
-    background: #191c29;
+    background: var(--card-bg-color);
     transform: rotate(45deg);
     top: 50%;
     left: 50%;
