Added fall 25 projects and visuals. Edited old projects wordings to be cleaner and more consistent, plus some grammer stuff.

--- a/src/app/components/projects/project-card/project-card.scss
+++ b/src/app/components/projects/project-card/project-card.scss
@@ -4,7 +4,7 @@
     background-color: transparent; // Must set or defaults button to angular mat color
     border-radius: 9px;
     height: 100%;
-    width: 100%;  // Add this
+    width: 100%;  
     display: flex;
     flex-direction: column;
     text-align: left;  // Add this - buttons default to center
