--- a/src/app/components/projects/project-card/project-card.html
+++ b/src/app/components/projects/project-card/project-card.html
@@ -1,4 +1,4 @@
-<button mat-flat-button (click)="openDialog()" class="pj-card">
+<button mat-flat-button (click)="openDialog()" class="pj-card card">
     <div class="frontside">
         <div class="title">
             <div class="name">{{ item.Name }}</div>
