--- a/src/app/components/timeline/timeline-card/timeline-card.scss
+++ b/src/app/components/timeline/timeline-card/timeline-card.scss
@@ -148,81 +148,8 @@ button {
   }
 }
 
-
-/*
-.tl-card {
-  width: min(32rem, 90vw); // Smaller of 32rem or 90% viewport width
-  height: 12rem;
-  padding: 1rem;
-  display: grid;
-  background-color: transparent;
-  color: aliceblue;
-
-  @media (max-width: 480px) {
-    height: auto;
-    min-height: 10rem;
-  }
-}
-
-button{
-    border-radius: 0px;
+.back-list{
+  text-align: left;
 }
 
 
-.front{
-    grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
-    overflow: hidden;
-}
-
-.top {
-    display: grid;
-    grid-template-columns: 4fr 16fr 4fr;
-}
-.top-left {
-  overflow: hidden;         // crop an oversize image 
-}
-
-.top-left img {             // if you have an <img> here 
-  width: 100%;
-  height: 100%;
-  object-fit:contain;        // fill the cell without distortion 
-}
-.top-mid{
-    display: flex;
-    flex-direction: column;
-    margin: auto 10px;
-}
-.top-mid-entity{
-    font-size: 1.2rem;
-}
-.top-mid-location{
-    font-size: 1rem;
-}
-.top-right{
-    display: flex;
-    flex-direction: column;
-    //margin: auto 0;
-    text-align: right;
-}
-
-
-.bot{
-    display: flex;
-    flex-direction: column;
-    margin: auto auto;
-}
-.bot-main{
-    font-size: 2rem;
-}
-.bot-sub{
-    display: flex;
-    font-size: 1rem;
-    justify-content:space-between;
-}
-
-
-.back{
-    grid-template-rows: auto;
-    overflow: auto;
-}
-*/
