--- a/src/app/components/projects/project-card/project-card.scss
+++ b/src/app/components/projects/project-card/project-card.scss
@@ -1,13 +1,13 @@
 .pj-card{
     padding: 1rem;
     color: white;
-    background-color: transparent; // Must set or defaults button to angular mat color
+    background-color: transparent; 
     border-radius: 9px;
     height: 100%;
     width: 100%;  
     display: flex;
     flex-direction: column;
-    text-align: left;  // Add this - buttons default to center
+    text-align: left;  
     border: none;  
     cursor: pointer;  
     
